Added xgboost model

--- a/models/Models - IT data.ipynb
+++ b/models/Models - IT data.ipynb
@@ -308,7 +308,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vk/c62whj215n12n7wh_5z7d4w00000gn/T/ipykernel_2833/1318280318.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/vk/c62whj215n12n7wh_5z7d4w00000gn/T/ipykernel_5026/1318280318.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -343,7 +343,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vk/c62whj215n12n7wh_5z7d4w00000gn/T/ipykernel_2833/564073592.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/vk/c62whj215n12n7wh_5z7d4w00000gn/T/ipykernel_5026/564073592.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -589,7 +589,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vk/c62whj215n12n7wh_5z7d4w00000gn/T/ipykernel_2833/500522213.py:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
+      "/var/folders/vk/c62whj215n12n7wh_5z7d4w00000gn/T/ipykernel_5026/500522213.py:20: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
       "  features_df[Y_column] = pd.Categorical(df[Y_column]).codes\n"
      ]
     }
@@ -1074,7 +1074,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x120bc7430>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x11c6d5a30>"
       ]
      },
      "execution_count": 25,
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "8f1db085",
    "metadata": {},
    "outputs": [
@@ -1703,12 +1703,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92de0285",
+   "metadata": {},
+   "source": [
+    "## XGBoost Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b842ab8f",
+   "execution_count": 39,
+   "id": "ce1c25ba",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from xgboost import XGBClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "0702c91c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create model instance\n",
+    "xgb1 = XGBClassifier(n_estimators=2, max_depth=2, learning_rate=1, objective='binary:logistic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ef087b18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit model\n",
+    "xgb1.fit(X_train, y_train)\n",
+    "# make predictions\n",
+    "y_pred = xgb1.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "b035ea83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[20,  5],\n",
+       "       [ 4, 11]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "de911a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision : 0.6875\n",
+      "Recall : 0.7333333333333333\n",
+      "F1 : 0.7096774193548386\n",
+      "Accuracy : 0.775\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score, accuracy_score\n",
+    "print(f\"Precision : {precision_score(y_test, y_pred)}\")\n",
+    "print(f\"Recall : {recall_score(y_test, y_pred)}\")\n",
+    "print(f\"F1 : {f1_score(y_test, y_pred)}\")\n",
+    "print(f\"Accuracy : {accuracy_score(y_test, y_pred)}\")"
+   ]
   }
  ],
  "metadata": {
